# football-telegram-bot

./: .gitignore  .pre-commit-config.yaml  README.md  const.py  database.sqlite  main.py  pyproject.toml
models/: __init__.py  base_models.py  models.py
