[tool.poetry]
name = "football-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Anatoliy Platonov <p4m.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.14.0"
telegram = "^0.0.1"
python-telegram-bot = "^13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
